--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
